<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:background="@drawable/smoothedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EmailRegister"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="169dp"
        android:text="@string/CleanAppLogin"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:background="@drawable/smoothedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:background="@drawable/cleanbuttons"
        android:text="@string/Login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="@string/Registerhere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</android.support.constraint.ConstraintLayout>