<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/smoothedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EmailRegister"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/smoothedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/PasswordRegister"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:text="@string/Register"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:background="@drawable/cleanbuttons"
        android:text="@string/RegisterandLogin"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />
</android.support.constraint.ConstraintLayout>