<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cleanbuttons"
        android:onClick="buttonChoice"
        android:text="@string/Logout"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:text="@string/WelcometoCleanAppmenu"
        android:textSize="22.7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startCleanUpButton"
        android:layout_width="312dp"
        android:layout_height="70dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/cleanbuttons"
        android:onClick="buttonChoice"
        android:text="@string/StartTheCleanUp"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/cleanbuttons"
        android:onClick="buttonChoice"
        android:text="@string/Profile"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/aboutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startCleanUpButton" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/cleanbuttons"
        android:onClick="buttonChoice"
        android:text="@string/About"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileButton"
        app:layout_constraintTop_toBottomOf="@+id/startCleanUpButton" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cleanbuttons"
        android:onClick="buttonChoice"
        android:text="@string/Admin"
        android:textColor="#ffffff"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/counterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginEnd="186dp"
        android:layout_marginRight="186dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/like"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:onClick="buttonChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/counterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterButton" />
</android.support.constraint.ConstraintLayout>