<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sendNewPasswordButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:background="@drawable/cleanbuttons"
        android:text="@string/SendNewPassword"
        android:textColor="#ffffff"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailEditText" />

    <EditText
        android:id="@+id/enterEmailEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/smoothedittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInfoTextView" />

    <TextView
        android:id="@+id/forgotPasswordInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/EnteryourEmailbelowtogetyournewpassword"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>